mobile stretched image fix

--- a/src/styles/cyberia-estates.css
+++ b/src/styles/cyberia-estates.css
@@ -121,8 +121,6 @@ p#apt-description, p.auctions-text, h2#sizestitle {
         width:100%;
         max-height:95%;
       }
-      section#roadmap, section#benefits{
-        max-height:15vh;
-      }
+   
  
 }
